# RISC-V_Simulator

./: .gitignore  CMakeLists.txt  main.cpp
src/: ALU.cpp  ALU.h  Load_Store_Buffer.cpp  Load_Store_Buffer.h  Predictor.cpp  Predictor.h  Program_Counter.cpp  Program_Counter.h  Register_File.cpp  Register_File.h  Reorder_buffer.cpp  Reorder_buffer.h  Reservation_Station.cpp  Reservation_Station.h  cpu.cpp  cpu.h  decoder.cpp  decoder.h  instruction.cpp  instruction.h  memory.cpp  memory.h
util/: CircularQueue.cpp  CircularQueue.h  Naive_Simulator.cpp  Naive_Simulator.h  config.h  utils.cpp  utils.h
